k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movingtoazure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movingtoazure
  template:
    metadata:
      labels:
        app: movingtoazure
        version: v0.1
    spec:
      containers:
      - name: movingtoazure
        image: ACR_URL/movingtoazure:v0.1
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: movingtoazure
spec:
  type: NodePort
  selector:
    app: movingtoazure
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movingtoazure
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  # https://docs.microsoft.com/en-us/azure/aks/http-application-routing
  - host: movingtoazure.AKS_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movingtoazure
            port:
              number: 80
